# menu-ninja

./: Cargo.toml  LICENSE
.cargo/: config.toml
assets/: deploy.sh  menu-ninja.service
src/: main.rs  model.rs  view.rs
