[package]
name = "menu-ninja"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
bjw-db = { git = "https://telematik.prakinf.tu-ilmenau.de/gitlab/dschatz/bjw-db.git", version = "0.1.0", features = ["derive"] }
bjw-db-derive = { git = "https://telematik.prakinf.tu-ilmenau.de/gitlab/dschatz/bjw-db.git", version = "0.1.0" }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
