[package]
name = "menu-ninja"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["form"] }
bjw-db = { git = "https://github.com/wyv3rn/bjw-db.git", version = "0.1.0", features = ["derive"] }
bjw-db-derive = { git = "https://github.com/wyv3rn/bjw-db.git", version = "0.1.0" }
clap = { version = "4.5.36", features = ["derive"] }
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
